[package]
name = "rust-example-grpc"
version = "0.1.0"
authors = ["Fabio Moreno <fabio.moreno@cuemby.com>"]
edition = "2018"

[lib]
name = "service"
path = "src/service/lib.rs"

[dependencies]
protobuf        = "2"
futures         = "0.*"
futures-cpupool = "0.1.*"
tls-api         = "0.1.*"
grpc = "0.6.1"
models = { git = "https://github.com/netsaj/rust-example-grpc-proto", tag="v0.0.2"}